fixed all card badge designs on small screen devices

--- a/src/index.css
+++ b/src/index.css
@@ -1766,10 +1766,6 @@ display: none;
     display: flex;
   }
 
-  .section1-main-explore {
-    display: none;
-  }
-
   .homepage-right {
     display: none;
   }
